[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==0.6.3",
    "duckduckgo-search==7.5.0",
    "faker==36.2.2",
    "langchain==0.3.20",
    "langchain-chroma==0.2.2",
    "langchain-community==0.3.19",
    "langchain-core==0.3.41",
    "langchain-openai==0.3.7",
    "langgraph==0.3.5",
    "pydantic==2.10.6",
    "pypdf==5.3.1",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.38",
    "sqlite-utils==3.38",
]
